--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
             "email": "sa@safs.me"
         }
     ],
-    "require": {}
+    "require": {
+        "php":"^7.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "wapi\\": "src"
+        }
+    },
+    "license": "MIT"
 }
