--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "wapi/sdk",
     "description": "挖数据sdk包",
     "require-dev": {
-        "wapi/sdk": "1.2.0"
+       
     },
     "authors": [
         {
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php":"^7.3"
+        "php":"^7.3",
+        "wapi/sdk": "1.2.0"  
     },
     "autoload": {
         "psr-4": {
