--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php":"^7.3",
-        "wapi/sdk": "1.0.0"  
+        "wapi/sdk": "v1.1"  
     },
     "autoload": {
         "psr-4": {
