--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php":"^7.3",
-        "wapi/sdk": "1.3.0"  
+        "wapi/sdk": "*"  
     },
     "autoload": {
         "psr-4": {
