--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
     "name": "wapi/sdk",
-    "description": "挖数据sdk包",
-    "require-dev": {
-        "wapi/sdk": "1.1.0"
-    },
+    "description": "挖数据phpsdk包",
     "authors": [
         {
             "name": "Safs",
@@ -11,7 +8,8 @@
         }
     ],
     "require": {
-        "php":"^7.3"
+        "php":"^7.3",
+        "wapi/sdk": "1.3.0"
     },
     "autoload": {
         "psr-4": {
