--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "php":"^7.3",
-        "wapi/sdk": "1.3.0"
+        "php":"^7.3"
     },
     "autoload": {
         "psr-4": {
